# mssql-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ghcookies.txt  rust-toolchain.toml
mssql-arrow/: BENCHMARK_REPORT.md  Cargo.toml  README.md
mssql-arrow/benches/: arrow_tds_bench.rs
mssql-arrow/src/: bulk_copy.rs  error.rs  lib.rs  query_reader.rs  serializer.rs  type_mapping.rs
mssql-arrow/tests/: bench_arrow_bulk_copy.rs  bulk_copy_integration.rs  query_reader_integration.rs  type_roundtrip.rs
mssql-arrow/tests/common/: mod.rs
mssql-mock-tds-py/: Cargo.toml  pyproject.toml
mssql-mock-tds-py/src/: lib.rs
mssql-odbc/: .gitignore  .instructions.md  Cargo.toml  README.md  build.rs  guidelines.md  parameters_plan.md  plan.md  tokio.md
mssql-odbc/docs/: connection_string_parser.md  parameters_plan.md  typed-columnar-fetch-plan.md
mssql-odbc/src/: lib.rs  test_support.rs
mssql-odbc/src/api/: alloc_handle.rs  bind_param.rs  close_cursor.rs  connect.rs  describe_col.rs  disconnect.rs  driver_connect.rs  exec_common.rs  exec_direct.rs  execute.rs  exports.rs  fetch.rs  fetch_convert.rs  free_handle.rs  get_connect_attr.rs  get_data.rs  get_diag.rs  get_diag_rec.rs  get_env_attr.rs  get_functions.rs  get_info.rs  get_stmt_attr.rs  mod.rs  more_results.rs  num_result_cols.rs  odbc_types.rs  prepare.rs  set_connect_attr.rs  set_env_attr.rs  set_stmt_attr.rs  sqlstate.rs  util.rs
mssql-odbc/src/auth/: entra.rs  interactive.rs  mod.rs
mssql-odbc/src/connection/: connection_string_parser.rs  mod.rs  odbc_authentication_transformer.rs  odbc_authentication_validator.rs  odbc_supported_auth_keywords.rs
mssql-odbc/src/error/: diag.rs  mod.rs
mssql-odbc/src/handles/: dbc.rs  desc.rs  env.rs  mod.rs  stmt.rs
mssql-odbc/src/params/: bound_param.rs  convert.rs  mod.rs
mssql-odbc/tests/e2e/: CMakeLists.txt  README.md  build_e2e.sh  run_e2e.ps1  run_e2e.sh  run_e2e_coverage.sh
mssql-py-core/: Cargo.toml  pyproject.toml
mssql-py-core/.config/: nextest.toml
mssql-py-core/src/: arrow_bulkcopy.rs  async_connection.rs  async_cursor.rs  async_runtime.rs  bulkcopy.rs  connection.rs  cursor.rs  lib.rs  python_entra_token_factory.rs  row_writer.rs  tracing_init.rs  types.rs  utils.rs
mssql-py-core/src/odbc_auth/: mod.rs  odbc_authentication_transformer.rs  odbc_authentication_validator.rs
mssql-py-core/tests/: test_bulkcopy_arrow_bigint.py  test_bulkcopy_arrow_binary.py  test_bulkcopy_arrow_bit.py  test_bulkcopy_arrow_char.py  test_bulkcopy_arrow_column_mismatch.py  test_bulkcopy_arrow_date.py  test_bulkcopy_arrow_datetime.py  test_bulkcopy_arrow_datetime2.py  test_bulkcopy_arrow_datetimeoffset.py  test_bulkcopy_arrow_decimal.py  test_bulkcopy_arrow_float.py  test_bulkcopy_arrow_image.py  test_bulkcopy_arrow_int.py  test_bulkcopy_arrow_json.py  test_bulkcopy_arrow_longhaul.py  test_bulkcopy_arrow_money.py  test_bulkcopy_arrow_multipart_table_names.py  test_bulkcopy_arrow_nchar.py  test_bulkcopy_arrow_ntext.py  test_bulkcopy_arrow_numeric.py  test_bulkcopy_arrow_nvarchar.py  test_bulkcopy_arrow_options.py  test_bulkcopy_arrow_smallint.py  test_bulkcopy_arrow_source_coercion.py  test_bulkcopy_arrow_text.py  test_bulkcopy_arrow_time.py  test_bulkcopy_arrow_tinyint.py  test_bulkcopy_arrow_transactions.py  test_bulkcopy_arrow_type_edges.py  test_bulkcopy_arrow_unsupported_types.py  test_bulkcopy_arrow_uuid.py  test_bulkcopy_arrow_varchar.py  test_bulkcopy_arrow_xml.py  test_bulkcopy_binary.py  test_bulkcopy_nvarchar.py  test_client_context.py  test_entra_id_token_factory.py
mssql-py-core/tests/mssql_python/: test_auth_resolution_e2e.py  test_bulkcopy_access_token.py  test_connstr_params_e2e.py
mssql-py-core/tests/rs-only-tests/: test_mock_server_fedauth.py
mssql-tds/: Cargo.toml
mssql-tds-bench/: Cargo.toml  README.md
mssql-tds-bench/benches/: bulk.rs  connection.rs  datatypes.rs  query.rs  query_prepared.rs  query_procs.rs  query_rows.rs  tds_specific.rs
mssql-tds-bench/perf-lab/: baseline-commit.txt  run-benchmarks.ps1  run-benchmarks.sh  sql-config-dump.sql
mssql-tds-bench/src/: lib.rs
mssql-tds/benches/: arrow_tds_bench.rs  perf.rs
mssql-tds/fuzz/: Cargo.toml
mssql-tds/fuzz/fuzz_targets/: fuzz_api_inputs.rs  fuzz_bulk_copy.rs  fuzz_der_framing.rs
mssql-tds/src/: connection.rs  core.rs  datatypes.rs  fuzz_support.rs  lib.rs  message.rs  query.rs  sql_identifier.rs  ssrp.rs  test_client_support.rs
mssql-tds/src/connection/: bulk_copy.rs  client_context.rs  connection_actions.rs  cursor_ops.rs  datasource_parser.rs  entra_auth.rs  execution_context.rs  instance_cache.rs  metadata_retriever.rs  session_recovery.rs  tds_client.rs  transport.rs
mssql-tds/src/connection_provider/: tds_connection_provider.rs
mssql-tds/src/cursor/: cursor_response.rs  cursor_types.rs
mssql-tds/src/datatypes/: bulk_copy_metadata.rs  decoder.rs  row_writer.rs  sql_tvp.rs  sql_vector.rs  sqldatatypes.rs  sqltypes.rs  tds_value_serializer.rs
mssql-tds/src/error/: mod.rs
mssql-tds/src/handler/: handler_factory.rs
mssql-tds/src/io/: packet_reader.rs  (+3 more)
mssql-tds/tests/: bench_arrow_bulk_copy.rs  connectivity.rs  query_results.rs  test_always_encrypted.rs  test_bulk_copy.rs  test_bulk_copy_bigint.rs  test_bulk_copy_empty_plp.rs  test_bulk_copy_error_recovery.rs  test_bulk_copy_timeout.rs  test_bulk_copy_transactions.rs  test_bulk_copy_udt.rs  test_bulk_copy_uuid.rs  test_bulk_copy_variant.rs  test_bulk_copy_varying_columns.rs  test_bulk_copy_vector.rs  test_bulk_copy_with_metadata.rs  test_bulk_copy_xml.rs  test_client_read_apis.rs  test_connection_pool_primitives.rs  test_cursor_ops.rs  test_encrypt_for_connections.rs  test_extended_protection.rs  test_info_messages.rs  test_kerberos_gssapi.rs  test_mock_server.rs  test_mock_server_fedauth.rs  test_mock_server_tls.rs  test_multi_subnet_failover.rs  test_no_protocol_resolution.rs  test_redirection.rs  test_reset_connection.rs  test_rpc_datatypes.rs  test_rpc_results.rs  test_ssrp_local.rs  test_tls_handshake.rs  test_transport_protocols.rs  test_tvp.rs  test_vector_type.rs  test_windows_sspi.rs  timeout_and_cancel.rs
(+238 files in other folders)
