[package]
name = "mssql-arrow"
version = "0.1.0"
edition = "2024"
description = "High-performance Arrow RecordBatch bulk copy for SQL Server via mssql-tds"
license = "MIT"

[dependencies]
mssql-tds = { path = "../mssql-tds" }
arrow-array = "57"
arrow-schema = "57"
arrow-buffer = "57"
async-trait = "0.1.89"
tracing = { version = "0.1.43", features = ["log"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = "1.19.0"

[dev-dependencies]
dotenv = "0.15"
ctor = "0.4"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3"
uuid = "1.19.0"
