[package]
name = "mssql-mock-tds-py"
version = "0.1.0"
edition = "2024"
description = "Python bindings for the mock TDS server for testing SQL Server clients"
publish = false

[lib]
name = "mssql_mock_tds_py"
crate-type = ["cdylib"]

[features]
default = []
# Statically link OpenSSL into the extension. Used for portable macOS wheels so
# the build doesn't dynamically link Homebrew's libssl. Passes through to the
# mssql-mock-tds crate's own vendored-openssl feature (openssl/vendored).
vendored-openssl = ["mssql-mock-tds/vendored-openssl"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py39"] }
mssql-mock-tds = { path = "../mssql-mock-tds" }
tokio = { version = "1.48.0", features = ["full"] }
native-tls = "0.2"
