[package]
name = "mssql-py-core"
version = "0.1.7"
edition = "2024"
publish = false

[lib]
name = "mssql_py_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
mssql-tds = { path = "../mssql-tds" }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
anyhow = "1.0"
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
chrono = { version = "0.4", features = ["clock"] }
once_cell = "1.20"
rust_decimal = "1.36"
serde_json = "1.0"
uuid = "1.19"

[build-dependencies]
pyo3-build-config = "0.29.0"

# Release profile: emit split debug info so shipped binaries stay small
# while a separate .pdb / .dwp / .dSYM is available for symbolication of
# customer crash dumps. See work item 45990.
#
# - debug = "full": full DWARF / PDB info generated
# - split-debuginfo = "packed": on Linux emits a build-id-linked .dwp next
#   to the .so; on macOS produces a .dSYM bundle; ignored on Windows-MSVC
#   which always emits a separate .pdb.
# - strip = "debuginfo": strips DWARF from the shipped .so but keeps the
#   symbol table + GNU build-id so the debug-info file can be located.
#   NOTE: intentionally NOT "symbols" — that would drop .symtab and break
#   symbol lookup by name for Linux minidumps.
# - lto = true: mirrors the workspace release profile.
[profile.release]
lto = true
debug = "full"
split-debuginfo = "packed"
strip = "debuginfo"
