[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mssql-py-core"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
module-name = "mssql_py_core"
# Don't vendor shared libraries (libssl, libcrypto) into the wheel.
#
# Two manylinux flavors are built so the extension's ABI honestly matches the
# wheel tag and so mssql-python can repackage either depending on the target
# environment:
#   - manylinux_2_28 (AlmaLinux 8): links libssl.so.1.1 / libcrypto.so.1.1,
#     GLIBC <= 2.28. For RHEL 8, Ubuntu 20.04, Debian 11, Amazon Linux 2.
#   - manylinux_2_34 (AlmaLinux 9): links libssl.so.3 / libcrypto.so.3,
#     GLIBC <= 2.34. For RHEL 9+, Ubuntu 22.04+, Debian 12+.
#
# OpenSSL is intentionally a runtime OS dependency in both flavors; the host
# is expected to provide it. The wheel filename tag is set explicitly via
# `maturin build --compatibility manylinux_2_<N>_<arch>` from CI.
#
# macOS uses Security.framework and Windows uses SChannel, so neither has an
# OpenSSL dependency.
auditwheel = "skip"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "python-dotenv>=1.0.0", "maturin>=1.0,<2.0"]
