# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "mssql-tds-bench"
version = "0.1.0"
edition = "2024"
description = "Fixed Criterion harness for benchmarking mssql-tds with a swappable dependency"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
# The library under test. This is the ONLY dependency that is swapped between a
# baseline run and a candidate run so that mssql-tds is the only variable:
#
#   candidate (default): path = "../mssql-tds"
#   baseline (CI swap):  git = "https://.../mssql-rs", tag = "perf-baseline"
#
# The harness code, Criterion version, and toolchain stay byte-for-byte identical
# across both runs, so any statistically significant delta is attributable to
# mssql-tds itself.
mssql-tds = { path = "../mssql-tds" }

async-trait = "0.1.89"
criterion = "0.5"
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15"

[[bench]]
name = "connection"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "datatypes"
harness = false

[[bench]]
name = "bulk"
harness = false

[[bench]]
name = "tds_specific"
harness = false
