[package]
name = "mssql-tds"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the TDS (Tabular Data Stream) protocol for SQL Server"
license = "MIT"
readme = "README.md"
keywords = ["sql-server", "tds", "mssql", "database", "async"]
categories = ["database", "network-programming"]

[features]
default = ["integrated-auth", "tls-schannel-direct-on-windows"]
# Windows SSPI (Security Support Provider Interface) for integrated authentication
sspi = []
# Unix GSSAPI (Kerberos) for integrated authentication
gssapi = []
# Enable both SSPI and GSSAPI for cross-platform integrated authentication
integrated-auth = ["sspi", "gssapi"]
# Use the in-tree Schannel-direct TLS engine (Windows-only effect; on
# non-Windows targets this feature is a no-op because the win_tls module
# itself is cfg(windows) gated).
tls-schannel-direct = []
# Default-on bundle that routes the dispatcher to the Schannel-direct
# engine on Windows. Kept as a separate feature so downstream crates can
# disable it (`default-features = false`) to fall back to native-tls
# unconditionally — useful as an escape hatch if the rewrite needs to
# be temporarily disabled in production.
tls-schannel-direct-on-windows = ["tls-schannel-direct"]
# Always Encrypted column-encryption data path. Off by default to keep the
# cryptography crates out of builds that do not need them. Uses pure-Rust
# RustCrypto crates (no native/system dependency), so it builds on every target
# including default Windows (Schannel) builds. Enable to encrypt parameters and
# decrypt encrypted result columns.
column-encryption = [
    "dep:aes",
    "dep:cbc",
    "dep:hmac",
    "dep:sha2",
    "dep:sha1",
    "dep:rsa",
    "dep:rand_core",
]


[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
tokio-native-tls = "0.3.1"
native-tls = { version = "0.2.18", features = ["alpn"] }
futures = "0.3.31"
byteorder = "1.5.0"
tokio-util = { version = "0.7.17", features = ["full"] }
bytes = "1.11.0"
tracing = { version = "0.1.43", features = ["log"] }
bitflags = "2.10.0"
thiserror = "2.0.17"
bigdecimal = "0.4"
# For pretty printing of the packets in the traces.
pretty-hex = "0.4"
# Added for setting the keep alives on the socket.
socket2 = { version = "0.5", features = ["all"] }
hostname = "0.4.2"
# For LCID-based encoding conversion (TEXT/NTEXT reading)
encoding_rs = "0.8"
# For certificate expiry validation (ServerCertificate feature)
# Note: native-tls handles PEM/DER parsing, x509-parser only for expiry check
x509-parser = "0.18.0"
# For DNS resolution (reverse DNS lookup for SPN canonicalization)
dns-lookup = "2.0"
# Required to deserialize Vector(Float16) values from the TDS stream (Vector feature v2)
half = "2.7.1"
# AEAD_AES_256_CBC_HMAC_SHA256 cell encryption and RSA-OAEP CEK wrapping for
# Always Encrypted. Pure-Rust RustCrypto crates, all optional and enabled only
# via the `column-encryption` feature. Chosen over the native `openssl` crate so
# the feature builds with no system OpenSSL on any target (notably default
# Windows/Schannel builds, where OpenSSL is otherwise absent).
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", features = ["alloc"], optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", features = ["oid"], optional = true }
sha1 = { version = "0.10", optional = true }
rsa = { version = "0.9", features = ["pem"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }



[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "winerror", "winbase"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Registry", "Win32_System_SystemInformation", "Wdk_System_SystemServices"] }
# Low-level raw SSPI / Schannel / CryptoAPI bindings for the win_tls module.
# Pulled in directly because the `windows` crate's safe wrappers don't expose
# the SecBuffer / InitializeSecurityContextW shapes we need verbatim.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
] }

[target.'cfg(unix)'.dependencies]
# For runtime GSSAPI library detection using dlopen/dlsym
libc = "0.2"

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bench]]
name = "perf"
harness = false

[dev-dependencies]
rand = "0.9.2"
dotenv = "0.15"
azure_identity = "0.25.0"
azure_core = "0.25.0"
# Pin `time` to 0.3.47: 0.3.48 introduces a `From<HourBase>` impl that triggers a
# coherence conflict (E0119) when compiling `typespec_client_core` (pulled in via
# the azure_* dev-dependencies). `time` arrives only as a transitive dev-dependency,
# so this pin keeps fresh dependency resolution (e.g. the Kerberos CI container,
# which has no committed Cargo.lock) on a version that compiles.
time = "=0.3.47"
ctor = "0.4"
mockall = "0.13.1"
criterion = "0.5"
mssql-mock-tds = { path = "../mssql-mock-tds" }
tempfile = "3.13"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
